Tue Jul 15 04:55:50 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * bin/jbi/SingleProcess.sh:
        
          . Bug fix where the script was missing the deployment jar file
            and the main class was invalid.

Tue Jul 15 04:28:22 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/workers/Test_Logger/CUTS/TestLogger.java:

          . Bug fix where the connect (String) method failed to connect to
            the TestManager in the naming service with the specified name.

          . Added a new method named disconnect () for disconnecting from
            the test manager.

Mon Jul 14 21:08:04 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * integration/include/MPC:
        * integration/include/MPC/devenv.build:
        * integration/include/MPC/nmake.build:
        * integration/include/MPC/vc8.build:
        * integration/include/mpc.build:

          Slowly but surely trying to add support for different build
          types to CruiseControl scripts.

        * integration/include/devenv.build:

          Removed this file.

Mon Jul 14 19:52:23 UTC 2008  Hamilton Turner  <hamilton.a.turner@vanderbilt.edu>

        * etc/SQL/CUTS-unittest.sql:

          . Added SQL needed for unit tests

        * utils/BMW/website/App_Code/DataSetActions.cs:
        * utils/BMW/website/App_Code/LogVariables.cs:
        * utils/BMW/website/App_Code/UnitTestActions.cs:

          . Updates to go from log to msg_log and TestID to test_number

        * utils/BMW/website/UT_Chart.aspx.cs:
        * utils/BMW/website/UT_Create.aspx:
        * utils/BMW/website/UT_Create.aspx.cs:

          . Minor Updates

        * utils/BMW/website/charts:

          . Added charting library to BMW in correct place

        * utils/BMW/website/unittesting.aspx:
        * utils/BMW/website/unittesting.aspx.cs:

          . Overhauled the UI code to enforce data integrity. There should be
              almost no exceptions unhandled now
