@@ -1,7 +1,16 @@
+Tue Jul 15 05:06:21 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * cuts/utils/testing/Testing_App_Server.h:
+        * cuts/utils/testing/Testing_App_Server.cpp:
+        
+          . Bug fix where the register-with-ns command-line option was 
+            misspelled and resulted in the test manager daemon not 
+            registering itself with the naming service.
+
 Tue Jul 15 04:55:50 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * bin/jbi/SingleProcess.sh:
-        
+
           . Bug fix where the script was missing the deployment jar file
             and the main class was invalid.
 
